--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -145,14 +145,14 @@ hr.small {
 .intro-header .site-heading,
 .intro-header .post-heading,
 .intro-header .page-heading {
-  padding: 100px 0 50px;
+  padding: 150px 0 100px;
   color: white;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading,
   .intro-header .post-heading,
   .intro-header .page-heading {
-    padding: 150px 0;
+    padding: 250px 0;
   }
 }
 .intro-header .site-heading,
@@ -392,4 +392,24 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #0085a1;
+}
+
+
+
+/* ---------------------------------------------------------------------------------------------------------- */
+
+.test{
+
+  position: relative;
+    width: 100%;
+    height: 700px;
+    min-height: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-image: url('img/home.jpg');
+    text-align: center;
+    color: white;
 }
