New Event-Costume Karaoke

--- a/calendar.css
+++ b/calendar.css
@@ -73,7 +73,7 @@ body {font-family: Verdana, sans-serif;}
 
 /*EVENTS COLOR*/
 /* Highlight the "current" day */
-.days li .clubweek {
+.days li .Karaoke {
     padding: 5px;
     padding-left: 45px;
     padding-right: 50px;
