--- a/calendar.css
+++ b/calendar.css
@@ -90,7 +90,7 @@ body {font-family: Verdana, sans-serif;}
     color: white !important
 }
 /* Highlight the "current" day */
-.days li .pjday {
+.days li .event {
     padding: 5px;
     padding-left: 45px;
     padding-right: 50px;
